# Sborka

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: archive.rs  file_ops.rs  lib.rs  main.rs  models.rs  modrinth.rs  pack_manager.rs  settings.rs
src/api/: tauri.ts
src/components/: CodeEditor.tsx  CreatePackModal.tsx  EditorView.tsx  FileTree.tsx  ModrinthBrowser.tsx  ModrinthContentBrowser.tsx  PackList.tsx  SettingsModal.tsx  Toast.tsx
src/types/: index.ts
