[package]
name = "sborka"
version = "0.1.0"
description = "Редактор Minecraft сборок"
authors = ["you"]
edition = "2021"

[lib]
name = "sborka_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
walkdir = "2"
base64 = "0.22"
open = "5"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
zip = "2"
